# dbft-verifier

./: README.md
n3/: go.mod  go.sum  verifier.go  verifier_test.go
n3/circuit/: multisig_verify.go  multisig_verify_test.go
n3/golang/: go.sum  verifier.go  verifier_test.go
n3/rust/: Cargo.toml
n3/rust/lib/: Cargo.toml
n3/rust/lib/src/: lib.rs
n3/rust/program/: Cargo.toml
n3/rust/script/: Cargo.toml
neox/: go.mod  go.sum  verifier_test.go  zk_verify.go  zk_verify_test.go
neox/circuit/: ConstValue.go  SliceApi.go  SliceApi_test.go  blssig_verify.go  blssig_verify_test.go  header_enode_v1.go  header_enode_v1_test.go  helper.go  keccak256.go  keccak256_test.go  rlp_encode.go  rlp_encode_test.go  slice_composer.go  slice_composer_test.go  verify_v1.go  verify_v1_test.go
neox/golang/: go.mod  go.sum  verifier.go  verifier_test.go
neox/helper/: helper.go
neox/mpc/: plonk.go
neox/rust/: .gitmodules  Cargo.toml
neox/rust/contracts/: README.md
neox/rust/contracts/src/: SP1DBFT.sol
neox/rust/contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
neox/rust/contracts/test/: SP1DBFT.sol
neox/rust/lib/: Cargo.toml
neox/rust/lib/src/: lib.rs
neox/rust/program/: Cargo.toml
neox/rust/program/src/: main.rs
neox/rust/script/: Cargo.toml
neox/rust/script/files/: block_17.json  block_18.json  block_2087998.json  block_2087999.json  block_2088000.json  block_2715865.json  block_2715866.json
