[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-consensus = "1.0.5"
alloy-primitives = { version = "1.1.0", default-features = false, features = ["k256"]}
alloy-rlp = "0.3.11"
alloy-rpc-types = "1.0.7"
alloy-sol-types = "1.0"
bls12_381 = { version = "0.8.0", default-features = false, features = ["alloc", "groups", "pairings", "experimental"]}
secp256k1 = { version = "0.30", default-features = false }
serde_json = "1.0.140"
sha2 = "0.10.8"

[patch.crates-io]
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-4.0.0-v2"}
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.30.0-sp1-4.1.0" }
