[package]
name = "neox-dbft-verifier-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-sol-types = { workspace = true }
bls12_381 = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
